kube/app/template_branch-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${CI_COMMIT_REF_SLUG}
---
apiVersion: v1
kind: Service
metadata:
  name: "${CI_COMMIT_REF_SLUG}-web-site"
  namespace: ${CI_COMMIT_REF_SLUG}
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: "${CI_COMMIT_REF_SLUG}-web-site"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${CI_COMMIT_REF_SLUG}-web-site"
  namespace: ${CI_COMMIT_REF_SLUG} 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "${CI_COMMIT_REF_SLUG}-web-site"
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: "${CI_COMMIT_REF_SLUG}-web-site"
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"         
    spec:
      # nodeSelector:
      #   dedicated: "web-pool"
      # tolerations:
      # - key: "dedicated"
      #   operator: "Exists"      
      containers:
        - name: "${CI_COMMIT_REF_SLUG}-web-site"
          #imagePullPolicy: IfNotPresent
          #image: localhost:5000/devopstom/app:latest
          image: "${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${VERSION}"
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
      imagePullSecrets:
        - name: gitlab-dev-ops-tom                  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "${CI_COMMIT_REF_SLUG}-web-site"
  namespace: ${CI_COMMIT_REF_SLUG}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "false"
    kubernetes.io/ingress.class: "app-ingress"
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - ${CI_COMMIT_REF_SLUG}.devopstom.com.pl
    secretName: ${CI_COMMIT_REF_SLUG}.devopstom-tls
  rules:
  - host: ${CI_COMMIT_REF_SLUG}.devopstom.com.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: "${CI_COMMIT_REF_SLUG}-web-site"
          servicePort: 8080
